[gd_scene load_steps=5 format=2]

[ext_resource path="res://levels/CodingLevels/Levels/02-Variables.gd" type="Script" id=1]
[ext_resource path="res://levels/CodingLevels/Levels/02-Codes.gd" type="Script" id=2]
[ext_resource path="res://ui/Coding/InteractiveSession.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/Green/levels/GreenCoding01.tscn" type="PackedScene" id=4]

[node name="02-Variables" type="Node2D"]
script = ExtResource( 1 )
coding_resources_object = ExtResource( 2 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InteractiveSession" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="GreenCoding01" parent="." instance=ExtResource( 4 )]
[connection signal="build" from="CanvasLayer/InteractiveSession" to="." method="_on_InteractiveSession_build"]
